kubernetes/arr/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: arr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      nodeSelector:
        node-type: pia
      tolerations:
        - key: node-type
          value: pia

      containers:
        - name: sabnzbd
          image: ghcr.io/hotio/sabnzbd:release-v5.1.3@sha256:744e15eec1f7e38933609fc593ed2e95ddbe81e4fb62c7cb1a7c8078725ab5c8
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api?mode=version
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 2048Mi
              cpu: 3000m
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd-config
        - name: data
          persistentVolumeClaim:
            claimName: media
