kubernetes/arr/sabnzbd/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: arr
  annotations:
    tailscale.com/hostname: "sabnzbd"
    tailscale.com/proxy-class: "standard"
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
  tls:
    - hosts:
        - sabnzbd
